service-a-envoy.yaml
--- 
admin: 
  access_log_path: /dev/null
  address: 
    socket_address: 
      address: "0.0.0.0"
      port_value: 8081
static_resources: 
  clusters: 
    - 
      connect_timeout: 0.25s
      hosts: 
        - 
          socket_address: 
            address: "127.0.0.1"
            port_value: 8080
      lb_policy: round_robin
      name: local_service
      type: strict_dns
    - 
      connect_timeout: 0.25s
      hosts: 
        - 
          socket_address: 
            address: service_b
            port_value: 80
      lb_policy: round_robin
      name: service_b
      type: strict_dns
    - 
      connect_timeout: 1s
      hosts: 
        - 
          socket_address: 
            address: jaeger
            port_value: 9411
      lb_policy: round_robin
      name: jaeger
      type: strict_dns
    - 
      connect_timeout: 0.25s
      hosts: 
        - 
          socket_address: 
            address: statsd_exporter
            port_value: 9125
      lb_policy: ROUND_ROBIN
      name: statsd-exporter
      type: strict_dns
  listeners: 
    - 
      address: 
        socket_address: 
          address: "0.0.0.0"
          port_value: 80
      filter_chains: 
        - 
          filters: 
            - 
              config: 
                codec_type: auto
                http_filters: 
                  - 
                    config: {}
                    name: envoy.router
                route_config: 
                  name: local_route_service
                  virtual_hosts: 
                    - 
                      domains: 
                        - "*"
                      name: service_a
                      routes: 
                        - 
                          match: 
                            prefix: /
                          route: 
                            cluster: local_service
                stat_prefix: ingress_http
                tracing: 
                  operation_name: ingress
              name: envoy.http_connection_manager
    - 
      address: 
        socket_address: 
          address: "0.0.0.0"
          port_value: 9000
      filter_chains: 
        - 
          filters: 
            - 
              config: 
                codec_type: auto
                http_filters: 
                  - 
                    config: {}
                    name: envoy.router
                route_config: 
                  name: service_b
                  virtual_hosts: 
                    - 
                      domains: 
                        - "*"
                      name: service_b
                      routes: 
                        - 
                          match: 
                            prefix: /trace
                          route: 
                            cluster: service_b
                stat_prefix: egress_http
                tracing: 
                  operation_name: egress
              name: envoy.http_connection_manager
stats_sinks: 
  - 
    config: 
      prefix: service_A
      tcp_cluster_name: statsd-exporter
    name: envoy.statsd
tracing: 
  http: 
    config: 
      collector_cluster: jaeger
      collector_endpoint: /api/v1/spans
      shared_span_context: false
    name: envoy.zipkin
